mensagges.properties cambiados

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,2 +1,4 @@
-hola.id = mi mensaje
-hola.title = Mira cuantos autores!!!
+hola.tabla.id = ID
+hola.tabla.nombre = Name
+hola.tabla.email = Electronic mail
+hola.title = Welcome to the 2019@Authors Web!!!
